# energia

./: Cargo.toml  README.md  core_fsm.dot  problemy.txt
.github/workflows/: build.yml  pre_release.yaml  pre_release.yml  tagged_release.yml
appindicator/: Cargo.toml
appindicator/src/: main.rs  session.rs
energia/: Cargo.toml  session.xml
energia/src/: main.rs
idlehints/: Cargo.toml  session.xml
idlehints/src/: main.rs
idlehints/src/dbus/: login_manager.rs  session.rs
packaging/: energia.1
packaging/arch/: PKGBUILD
src/: main.rs
src/armaf/: actors.rs  effector.rs  mod.rs  ports.rs  server.rs  test.rs  test_actors.rs  test_controller.rs  test_ports.rs  test_sensor.rs  test_server.rs
src/control/: broadcast_adapter.rs  dbus_controller.rs  effect.rs  effector_inventory.rs  environment_controller.rs  idleness_controller.rs  mod.rs  sample_fsm.dot  sequencer.rs  sleep_controller.rs  watch_adapter.rs
src/control/test/: dbus_controller_test.rs  effects_counter.rs  idleness_controller_test.rs  mod.rs  sequencer_test.rs  sleep_controller_test.rs
src/dbus/: mod.rs
src/idleness/: idleness_monitor.rs  x11.rs
src/system/: brightness_effector.rs  display_effector.rs  dpms_effector.rs  idleness_effector.rs  idleness_sensor.rs  inhibition_sensor.rs  lock_effector.rs  logind_effector.rs  messages.rs  mod.rs  sequencer.rs  session_effector.rs  sleep_effector.rs  sleep_sensor.rs  upower_sensor.rs
src/system/test/: brightness_effector_test.rs  display_effector_test.rs  dpms_effector_test.rs  idleness_effector_test.rs  inhibition_sensor_test.rs  lock_effector_test.rs  logind_effector_test.rs  mod.rs  sequencer_test.rs  session_effector_test.rs  sleep_effector_test.rs  sleep_sensor_test.rs  upower_sensor_test.rs
