[package]
name = "energia"
version = "0.1.0"
authors = ["Róbert Selvek <selverob@fit.cvut.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8"
env_logger = "0.8.3"
log = "0.4"
x11rb = { version = "0.8.1", features = ["screensaver"] }
zbus = "1.8.0"
zvariant = "2.5.0"
actix = "0.12"
actix-rt = "2.2.0"
