[package]
name = "energia"
version = "0.3.0"
authors = ["Róbert Selvek <selverob@fit.cvut.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
flexi_logger = "0.22"
log = "0.4"
log-panics = "2"
# logind-zbus = "3.0"
# Until https://gitlab.com/flukejones/logind-zbus/-/issues/1 gets fixed
logind-zbus = {git = "https://gitlab.com/sellweek/logind-zbus.git", branch = "main"}
serde = {version = "1.0", features=["derive"]}
clap = {version = "3.1", features=["derive"]}
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = {version = "0.1", features = ["fs"] }
toml = "0.5"
upower_dbus = "0.2"
x11rb = { version = "0.9.0", features = ["screensaver", "xtest", "dpms"] }
zbus = {version = "2.0", default-features = false, features = ["tokio"]}
zvariant = "2.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] } # Allows stopping time and advancing it the way we want in tests
