[package]
name = "appindicator"
version = "0.1.0"
authors = ["Róbert Selvek <robert.selvek@ataccama.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libappindicator = "0.5.0"
gtk-sys = "0.9.2"
gtk = "0.8.0"
glib = "0.9.1"
dbus = "0.8.1"
